[package]
name = "bridge-utils"
version = "0.1.0"
authors = ["Broxus team"]
edition = "2021"

[dependencies]
bincode = "1.3"
borsh = "0.9"
enum-as-inner = "0.5"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

solana-program = "1.9"

bridge-derive = { path = "../bridge-derive" }
