[package]
name = "bridge-utils"
version = "0.1.0"
authors = ["Broxus team"]
edition = "2021"

[dependencies]
bincode = "1.3"
borsh = "0.10"
enum-as-inner = "0.6"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

solana-program = "1.16"

bridge-derive = { path = "../bridge-derive" }
