[package]
name = "native-proxy"
version = "0.1.0"
authors = ["Broxus team"]
edition = "2021"

[features]
no-entrypoint = []
test-bpf = ["bindings"]
bindings = ["no-entrypoint"]
wasm = ["no-entrypoint", "bindings", "serde-wasm-bindgen", "wasm-bindgen", "js-sys", "base64", "uuid"]

[dependencies]
borsh = "0.10"
enum-as-inner = "0.6"
solana-program = "1.16"
serde = { version = "1.0", features = ["derive"] }
spl-token = {version = "4.0.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "2.2.0", features = ["no-entrypoint"] }

base64 = { version = "0.21", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = {version = "0.6", optional = true }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"], optional = true }
uuid = { version = "1.2", features = ["v4", "serde"], optional = true }

bridge-derive = { path = "../bridge-derive" }
bridge-utils = { path = "../bridge-utils" }
token-proxy = { path = "../token-proxy", features = ["no-entrypoint", "bindings"] }

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
uuid = { version = "1.2", features = ["v4", "serde"] }

[lib]
crate-type = ["cdylib", "lib"]
