[package]
name = "native-proxy"
version = "0.1.0"
authors = ["Broxus team"]
edition = "2021"

[features]
default = ["entrypoint"]
no-entrypoint = []
test-bpf = ["bindings"]
bindings = []
entrypoint = ["dep:solana-program", "dep:spl-token", "dep:spl-associated-token-account", ]

[dependencies]
borsh = "0.10"
enum-as-inner = "0.6"
serde = { version = "1.0", features = ["derive"] }

solana-program = { version = "1.17", optional = true }
spl-token = { version = "4.0.0", features = ["no-entrypoint"], optional = true }
spl-associated-token-account = {version = "2.3.0", features = ["no-entrypoint"], optional = true }

base64 = { version = "0.21", optional = true }
uuid = { version = "1.2", features = ["v4", "serde"], optional = true }

bridge-derive = { path = "../bridge-derive" }
bridge-utils = { path = "../bridge-utils" }
token-proxy = { path = "../token-proxy", features = ["no-entrypoint", "bindings"] }

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
uuid = { version = "1.2", features = ["v4", "serde"] }

[lib]
crate-type = ["cdylib", "lib"]
