[package]
name = "round-loader"
version = "0.1.0"
authors = ["Broxus team"]
edition = "2021"

[features]
no-entrypoint = []
test-bpf = ["bindings"]
bindings = ["no-entrypoint"]
wasm = ["no-entrypoint", "bindings", "wasm-bindgen", "js-sys", "getrandom"]

[dependencies]
bincode = "1.3"
borsh = "0.9"
serde = { version = "1.0", features = ["derive"] }
solana-program = "1.13.6"

getrandom = { version = "0.2", features = ["js"], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"], optional = true }
serde-wasm-bindgen = "*"

bridge-derive = { path = "../bridge-derive" }
bridge-utils = { path = "../bridge-utils" }

[dev-dependencies]
chrono = "0.4.19"
solana-program-test = "1.13"
solana-sdk = "1.13"

[lib]
crate-type = ["cdylib", "lib"]
