[package]
name = "round-loader"
version = "0.1.0"
authors = ["Broxus team"]
edition = "2021"

[features]
default = ["entrypoint"]
no-entrypoint = []
test-bpf = ["bindings"]
bindings = []
wasm = ["no-entrypoint", "bindings", "serde-wasm-bindgen", "wasm-bindgen", "js-sys", "getrandom"]
entrypoint = ["dep:solana-program"]

[dependencies]
bincode = "1.3"
borsh = "0.10"
serde = { version = "1.0", features = ["derive"] }

solana-program = { version = "1.17", optional = true }

getrandom = { version = "0.2", features = ["js"], optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = {version = "0.6", optional = true }
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"], optional = true }

bridge-derive = { path = "../bridge-derive" }
bridge-utils = { path = "../bridge-utils" }

[dev-dependencies]
chrono = "0.4.19"
solana-program-test = "1.17"
solana-sdk = "1.17"

[lib]
crate-type = ["cdylib", "lib"]
