[package]
name = "solana-bridge"
version = "0.1.0"
authors = ["Broxus team"]
edition = "2021"

[dependencies]
borsh = "0.10"
solana-program = "1.17"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

bridge-utils = { path = "../bridge-utils" }
round-loader = { path = "../round-loader", features = ["no-entrypoint", "bindings"] }
token-proxy = { path = "../token-proxy", features = ["no-entrypoint", "bindings"] }
