[package]
name = "token-proxy"
version = "0.1.0"
authors = ["Broxus team"]
edition = "2021"

[features]
no-entrypoint = []
test-bpf = ["bindings"]
bindings = ["no-entrypoint", "uuid", "getrandom"]
wasm = ["no-entrypoint", "bindings", "wasm-bindgen", "js-sys"]

[dependencies]
base64 = "0.21"
bincode = "1.3"
borsh = "0.10"
enum-as-inner = "0.6"
solana-program = "1.16"
serde = { version = "1.0", features = ["derive"] }
spl-token = {version = "4.0.0", features = ["no-entrypoint"]}

getrandom = { version = "0.2", features = ["js"], optional = true }
js-sys = { version = "0.3", optional = true }
spl-associated-token-account = {version = "2.2.0", features = ["no-entrypoint"] }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"], optional = true }
serde-wasm-bindgen = "*"
uuid = { version = "1.2", features = ["v4", "serde"], optional = true }

bridge-derive = { path = "../bridge-derive" }
bridge-utils = { path = "../bridge-utils" }
round-loader = { path = "../round-loader", features = ["no-entrypoint"] }

[dev-dependencies]
chrono = "0.4.19"
solana-program-test = "1.16"
solana-sdk = "1.16"

[lib]
crate-type = ["cdylib", "lib"]
