[package]
name = "wasm"
version = "0.1.0"
authors = ["Broxus team"]
edition = "2021"

[features]
[dependencies]
base64 = "0.21"
borsh = "0.10"
solana-program = "1.17"
serde = { version = "1.0", features = ["derive"] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = {version = "2.3.0", features = ["no-entrypoint"] }

js-sys = { version = "0.3" }
serde-wasm-bindgen = {version = "0.6" }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
uuid = { version = "1.2", features = ["v4", "serde"] }

bridge-derive = { path = "../bridge-derive" }
bridge-utils = { path = "../bridge-utils" }
round-loader = { path = "../round-loader", features = ["no-entrypoint"] }
native-proxy = { path = "../native-proxy", features = ["no-entrypoint"] }
token-proxy = { path = "../token-proxy", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]
